[package]
name = "AlgorithmsAndDataStructureByFSharp"
version = "0.1.0"
authors = ["phasetr"]
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "phasetr_sample"
path = "phasetr.rs"

[dependencies]
ctx = "0.2.0"
proconio = { version = "=0.4.3", features = ["derive"] }
fixedbitset = "0.2"
bitset-fixed = "0.1.0"
